infra/minikube-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
spec:
  ingressClassName: nginx
  rules:
    - host: auth.uniplanet-back.autos
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
    - host: products.uniplanet-back.autos
      http:
        paths:
          - path: /api/products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv
                port:
                  number: 3001
    - host: account.uniplanet-back.autos
      http:
        paths:
          - path: /api/account/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-srv
                port:
                  number: 3002
    - host: chat.uniplanet-back.autos
      http:
        paths:
          - path: /api/chat/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-srv
                port:
                  number: 3003
    - host: message.uniplanet-back.autos
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: message-srv
                port:
                  number: 3004
